--- a/1.Build Makemore/build_makemore.ipynb
+++ b/1.Build Makemore/build_makemore.ipynb
@@ -2,18 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8a6d798b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['emma',\n",
+       " 'olivia',\n",
+       " 'ava',\n",
+       " 'isabella',\n",
+       " 'sophia',\n",
+       " 'charlotte',\n",
+       " 'mia',\n",
+       " 'amelia',\n",
+       " 'harper',\n",
+       " 'evelyn']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "open('names.txt', 'r').read()"
+    "words = open('names.txt', 'r').read().splitlines()\n",
+    "words[:10]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b40f094",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
