Implemented separation in bigram and hallucination of specials character Start and End

--- a/1.Build Makemore/build_makemore.ipynb
+++ b/1.Build Makemore/build_makemore.ipynb
@@ -33,11 +33,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1b40f094",
+   "execution_count": 8,
+   "id": "5990b9a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of names : 32033\n",
+      "Shortest name lenght : 2\n",
+      "Longuest name lenght : 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Total number of names : {len(words)}')\n",
+    "print(f'Shortest name lenght : {min(len(w) for w in words)}')\n",
+    "print(f'Longuest name lenght : {max(len(w) for w in words)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7d394876",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<S> e\n",
+      "e m\n",
+      "m m\n",
+      "m a\n",
+      "a <E>\n",
+      "<S> o\n",
+      "o l\n",
+      "l i\n",
+      "i v\n",
+      "v i\n",
+      "i a\n",
+      "a <E>\n",
+      "<S> a\n",
+      "a v\n",
+      "v a\n",
+      "a <E>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for w in words[:3]:\n",
+    "    # We want to mark character when they are at the start or end of a string (in our case of single name). For that we hallucinate special tokens.\n",
+    "    chs = ['<S>'] + list(w) + ['<E>']\n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        print(f'{ch1} {ch2}')\n"
+   ]
   }
  ],
  "metadata": {
