Added likelihood then log likelihood then loss function

--- a/2. Build Makemore/build_makemore.ipynb
+++ b/2. Build Makemore/build_makemore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "id": "47070dd0",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 86,
    "id": "ae5cbb70",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
    "id": "7915b0df",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 88,
    "id": "cb6bb48b",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 89,
    "id": "46c1a941",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 90,
    "id": "6bda5650",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 91,
    "id": "54de71ca",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 92,
    "id": "923b1655",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 93,
    "id": "21ab3518",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 94,
    "id": "db72e2e8",
    "metadata": {},
    "outputs": [],
@@ -165,17 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 95,
    "id": "ac586f06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x243520e49d0>"
+       "<matplotlib.image.AxesImage at 0x18e4db53110>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 96,
    "id": "0f32459d",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 97,
    "id": "571076ba",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "(np.float64(-0.5), np.float64(27.5), np.float64(27.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 98,
    "id": "18fae4c2",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 99,
    "id": "760c9515",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "(np.float64(-0.5), np.float64(26.5), np.float64(26.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 100,
    "id": "4c145a54",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
        "         134,  535,  929], dtype=torch.int32)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 101,
    "id": "e76349e6",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        "        0.0512, 0.0642, 0.0408, 0.0024, 0.0117, 0.0096, 0.0042, 0.0167, 0.0290])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 102,
    "id": "66a827ce",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
        "tensor([1, 1, 2, 0, 0, 2, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 103,
    "id": "ca0d31eb",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "'c'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 104,
    "id": "f4395ef1",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
        "torch.Size([27])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 105,
    "id": "50bf6dbb",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 106,
    "id": "45e766f7",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 110,
    "id": "5fc1154b",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
        "torch.Size([27, 27])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,15 +558,15 @@
    "source": [
     "# now let's fix an ineficienty. we always get the probability by (converting to float, get row and so on). To be faster, let's build and array with the probabilities in it so we can directly take the with and index.\n",
     "P = N.float()\n",
-    "# so we would like a P = P / P.sum() but P.sum() give us a summ of each element in the two dimensionals array which isn't what we want. pytorch give us something for this. Here, the .sum isn't the classic .sum but the pytorch one.\n",
-    "P = P / P.sum(1, keepdim=True)\n",
+    "# so we would like a P = P / P.sum() but P.sum() give us a sum of each elements in the two dimensionals array which isn't what we want. pytorch give us something for this. Here, the .sum isn't the classic .sum but the pytorch one.\n",
+    "P /= P.sum(1, keepdim=True)\n",
     "# we broacasted a [27, 1] array on a [27, 27]\n",
     "P.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 116,
    "id": "3869d9a3",
    "metadata": {},
    "outputs": [
@@ -574,29 +574,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cexze.\n",
-      "momasurailezitynn.\n",
-      "konimittain.\n",
-      "llayn.\n",
-      "ka.\n",
-      "da.\n",
-      "staiyaubrtthrigotai.\n",
-      "moliellavo.\n",
-      "ke.\n",
-      "teda.\n",
-      "ka.\n",
-      "emimmsade.\n",
-      "enkaviyny.\n",
-      "ftlspihinivenvorhlasu.\n",
-      "dsor.\n"
+      ".cexze.\n",
+      ".momasurailezitynn.\n",
+      ".konimittain.\n",
+      ".llayn.\n",
+      ".ka.\n"
      ]
     }
    ],
    "source": [
     "g = torch.Generator().manual_seed(2147483647)\n",
-    "for i in range(15):\n",
+    "for i in range(5):\n",
     "    out = []\n",
     "    ix = 0\n",
+    "    out.append(itos[ix])\n",
     "    while True:\n",
     "        p = P[ix]\n",
     "        ix = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
@@ -604,6 +595,117 @@
     "        if ix == 0:\n",
     "            break\n",
     "    print(''.join(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "220ee715",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".e - 0.0478\n",
+      "em - 0.0377\n",
+      "mm - 0.0253\n",
+      "ma - 0.3899\n",
+      "a. - 0.1960\n",
+      ".o - 0.0123\n",
+      "ol - 0.0780\n",
+      "li - 0.1777\n",
+      "iv - 0.0152\n",
+      "vi - 0.3541\n",
+      "ia - 0.1381\n",
+      "a. - 0.1960\n",
+      ".a - 0.1377\n",
+      "av - 0.0246\n",
+      "va - 0.2495\n",
+      "a. - 0.1960\n"
+     ]
+    }
+   ],
+   "source": [
+    "for w in words[:3]:\n",
+    "    chs = ['.'] + list(w) + ['.']\n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        ix1 = stoi[ch1]\n",
+    "        ix2 = stoi[ch2]\n",
+    "        prob = P[ix1, ix2]\n",
+    "        print(f'{ch1}{ch2} - {prob:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "8c6da237",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".e - 0.0478 - -3.0408\n",
+      "em - 0.0377 - -3.2793\n",
+      "mm - 0.0253 - -3.6772\n",
+      "ma - 0.3899 - -0.9418\n",
+      "a. - 0.1960 - -1.6299\n",
+      ".o - 0.0123 - -4.3982\n",
+      "ol - 0.0780 - -2.5508\n",
+      "li - 0.1777 - -1.7278\n",
+      "iv - 0.0152 - -4.1867\n",
+      "vi - 0.3541 - -1.0383\n",
+      "ia - 0.1381 - -1.9796\n",
+      "a. - 0.1960 - -1.6299\n",
+      ".a - 0.1377 - -1.9829\n",
+      "av - 0.0246 - -3.7045\n",
+      "va - 0.2495 - -1.3882\n",
+      "a. - 0.1960 - -1.6299\n",
+      "tensor(-38.7856)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now let's get the likelihood (the product of theses probabilities) For convenience to not work with such small number people work with the log likelihood\n",
+    "log_likelihood = 0\n",
+    "count = 0\n",
+    "for w in words[:3]:\n",
+    "    chs = ['.'] + list(w) + ['.']\n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        ix1 = stoi[ch1]\n",
+    "        ix2 = stoi[ch2]\n",
+    "        prob = P[ix1, ix2]\n",
+    "        log_prob = torch.log(prob)\n",
+    "        log_likelihood += log_prob\n",
+    "        count += 1\n",
+    "        print(f'{ch1}{ch2} - {prob:.4f} - {log_prob:.4f}')\n",
+    "# the worse the probability is (more distant from 1) the worse/bigger the likelihood log is. \n",
+    "# log(a*b*c) = log(a) + log(b) + log(c)\n",
+    "print(log_likelihood)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53b7592f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(38.7856)\n",
+      "tensor(2.4241)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now we don't really like this log_likelihood because we want a loss function. A semantic that low is good. So let's invert this\n",
+    "nll = -log_likelihood\n",
+    "print(nll)\n",
+    "# now, the lower it can be is 0 and the higer it is the less likely the result was according to the probabilities array. Then we normalize it\n",
+    "print(nll/count) # <= what we call Loss Function"
    ]
   }
  ],
