Added commentary for loss function

--- a/2. Build Makemore/build_makemore.ipynb
+++ b/2. Build Makemore/build_makemore.ipynb
@@ -707,6 +707,29 @@
     "# now, the lower it can be is 0 and the higer it is the less likely the result was according to the probabilities array. Then we normalize it\n",
     "print(nll/count) # <= what we call Loss Function"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "797a8dd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To summarize : maximize likelihood of the data w.r.t. model parameters (statistical modeling)\n",
+    "# equivalent to maximizing the log likelihood\n",
+    "# equivalent to minimizing the negative log likelihood\n",
+    "# equivalent to minimizing the average negative log likelihood <= loss function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7df7b799",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Up to now, the numbers (probabilities) are being kept in a two dimensional array. But what we want is for them to be kept in a neural network"
+   ]
   }
  ],
  "metadata": {
