Clarify log likelihood explanation in build_makemore.ipynb and add definition for monotonic function in README.md

--- a/2. Build Makemore/build_makemore.ipynb
+++ b/2. Build Makemore/build_makemore.ipynb
@@ -716,7 +716,7 @@
    "outputs": [],
    "source": [
     "# To summarize : maximize likelihood of the data w.r.t. model parameters (statistical modeling)\n",
-    "# equivalent to maximizing the log likelihood\n",
+    "# equivalent to maximizing the log likelihood (because log is a monotonic function)\n",
     "# equivalent to minimizing the negative log likelihood\n",
     "# equivalent to minimizing the average negative log likelihood <= loss function"
    ]
