Added model smoothing

--- a/2. Build Makemore/build_makemore.ipynb
+++ b/2. Build Makemore/build_makemore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "id": "47070dd0",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "id": "ae5cbb70",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "id": "7915b0df",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "id": "cb6bb48b",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "id": "46c1a941",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "id": "6bda5650",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "id": "54de71ca",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "id": "923b1655",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "id": "21ab3518",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "id": "db72e2e8",
    "metadata": {},
    "outputs": [],
@@ -165,17 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "id": "ac586f06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x18e4db53110>"
+       "<matplotlib.image.AxesImage at 0x1ed71d77e50>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "id": "0f32459d",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "id": "571076ba",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "(np.float64(-0.5), np.float64(27.5), np.float64(27.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "id": "18fae4c2",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "id": "760c9515",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "(np.float64(-0.5), np.float64(26.5), np.float64(26.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 16,
    "id": "4c145a54",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
        "         134,  535,  929], dtype=torch.int32)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "id": "e76349e6",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        "        0.0512, 0.0642, 0.0408, 0.0024, 0.0117, 0.0096, 0.0042, 0.0167, 0.0290])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "id": "66a827ce",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
        "tensor([1, 1, 2, 0, 0, 2, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "id": "ca0d31eb",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "'c'"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "id": "f4395ef1",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
        "torch.Size([27])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "id": "50bf6dbb",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "id": "45e766f7",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 33,
    "id": "5fc1154b",
    "metadata": {},
    "outputs": [
@@ -550,14 +550,14 @@
        "torch.Size([27, 27])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# now let's fix an ineficienty. we always get the probability by (converting to float, get row and so on). To be faster, let's build and array with the probabilities in it so we can directly take the with and index.\n",
-    "P = N.float()\n",
+    "P = (N+1).float()\n",
     "# so we would like a P = P / P.sum() but P.sum() give us a sum of each elements in the two dimensionals array which isn't what we want. pytorch give us something for this. Here, the .sum isn't the classic .sum but the pytorch one.\n",
     "P /= P.sum(1, keepdim=True)\n",
     "# we broacasted a [27, 1] array on a [27, 27]\n",
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 34,
    "id": "3869d9a3",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 22,
    "id": "220ee715",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 35,
    "id": "8c6da237",
    "metadata": {},
    "outputs": [
@@ -646,23 +646,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".e - 0.0478 - -3.0408\n",
+      ".e - 0.0478 - -3.0410\n",
       "em - 0.0377 - -3.2793\n",
-      "mm - 0.0253 - -3.6772\n",
-      "ma - 0.3899 - -0.9418\n",
-      "a. - 0.1960 - -1.6299\n",
-      ".o - 0.0123 - -4.3982\n",
-      "ol - 0.0780 - -2.5508\n",
-      "li - 0.1777 - -1.7278\n",
-      "iv - 0.0152 - -4.1867\n",
-      "vi - 0.3541 - -1.0383\n",
-      "ia - 0.1381 - -1.9796\n",
-      "a. - 0.1960 - -1.6299\n",
-      ".a - 0.1377 - -1.9829\n",
-      "av - 0.0246 - -3.7045\n",
-      "va - 0.2495 - -1.3882\n",
-      "a. - 0.1960 - -1.6299\n",
-      "tensor(-38.7856)\n"
+      "mm - 0.0253 - -3.6753\n",
+      "ma - 0.3885 - -0.9454\n",
+      "a. - 0.1958 - -1.6305\n",
+      ".o - 0.0123 - -4.3965\n",
+      "ol - 0.0779 - -2.5526\n",
+      "li - 0.1774 - -1.7293\n",
+      "iv - 0.0152 - -4.1845\n",
+      "vi - 0.3508 - -1.0476\n",
+      "ia - 0.1380 - -1.9807\n",
+      "a. - 0.1958 - -1.6305\n",
+      ".a - 0.1376 - -1.9835\n",
+      "av - 0.0246 - -3.7041\n",
+      "va - 0.2473 - -1.3971\n",
+      "a. - 0.1958 - -1.6305\n",
+      "tensor(-38.8086)\n"
      ]
     }
    ],
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "53b7592f",
    "metadata": {},
    "outputs": [
@@ -695,8 +695,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(38.7856)\n",
-      "tensor(2.4241)\n"
+      "tensor(38.8086)\n",
+      "tensor(2.4255)\n"
      ]
     }
    ],
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "797a8dd4",
    "metadata": {},
    "outputs": [],
@@ -723,12 +723,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "7df7b799",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Up to now, the numbers (probabilities) are being kept in a two dimensional array. But what we want is for them to be kept in a neural network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ecbdaa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'builtin_function_or_method' object has no attribute 'sum'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# We have a small problem and that is that some bigram have a probability of 0, which make them impossible to occur which is actually wrong. For this, there is a technique called model Smoothing. In rough words, it means adding something to each probability. The bigger the number we add the more the probability will tend to look equals.\u001b[39;00m\n\u001b[32m      2\u001b[39m P = (N+\u001b[32m1\u001b[39m).float\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m P /= \u001b[43mP\u001b[49m\u001b[43m.\u001b[49m\u001b[43msum\u001b[49m(\u001b[32m1\u001b[39m, keepdims=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'builtin_function_or_method' object has no attribute 'sum'"
+     ]
+    }
+   ],
+   "source": [
+    "# We have a small problem and that is that some bigram have a probability of 0, which make them impossible to occur which is actually wrong. For this, there is a technique called model Smoothing. In rough words, it means adding something to each probability. The bigger the number we add the more the probability will tend to look equals.\n",
+    "# So this P = N.float becomes P = (N+1).float"
    ]
   }
  ],
