Fixed name of jupyter notebooks

--- a/2. Build Makemore/makemore_part1.ipynb
+++ b/2. Build Makemore/makemore_part1.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8156f2d7",
+   "metadata": {},
+   "source": [
+    "# BIGRAMS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "id": "47070dd0",
    "metadata": {},
    "outputs": [],
@@ -12,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "id": "ae5cbb70",
    "metadata": {},
    "outputs": [
@@ -37,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "id": "7915b0df",
    "metadata": {},
    "outputs": [
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "id": "cb6bb48b",
    "metadata": {},
    "outputs": [],
@@ -78,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "id": "46c1a941",
    "metadata": {},
    "outputs": [
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 6,
    "id": "6bda5650",
    "metadata": {},
    "outputs": [],
@@ -114,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "id": "54de71ca",
    "metadata": {},
    "outputs": [],
@@ -125,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "id": "923b1655",
    "metadata": {},
    "outputs": [],
@@ -138,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "id": "21ab3518",
    "metadata": {},
    "outputs": [],
@@ -153,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "id": "db72e2e8",
    "metadata": {},
    "outputs": [],
@@ -165,17 +173,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "id": "ac586f06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b5ecbb05d0>"
+       "<matplotlib.image.AxesImage at 0x20d39352d90>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -196,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "id": "0f32459d",
    "metadata": {},
    "outputs": [],
@@ -208,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 13,
    "id": "571076ba",
    "metadata": {},
    "outputs": [
@@ -218,7 +226,7 @@
        "(np.float64(-0.5), np.float64(27.5), np.float64(27.5), np.float64(-0.5))"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -246,10 +254,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 14,
    "id": "18fae4c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     14\u001b[39m         ix1 = stoi[ch1]\n\u001b[32m     15\u001b[39m         ix2 = stoi[ch2]\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m         N[ix1, ix2] += \u001b[32m1\u001b[39m\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# build \"decripter\"\u001b[39;00m\n\u001b[32m     18\u001b[39m itos = {i:s \u001b[38;5;28;01mfor\u001b[39;00m s, i \u001b[38;5;129;01min\u001b[39;00m stoi.items()}\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "# we can see that some space is been wasted, the something+<S> column and the <E> + something row have only 0 because they will never exist. The reason we were using bracket are because there is a convention in natural language processing that bracket denote special tokens. But let's simplify this in our case.\n",
     "# build array\n",
@@ -273,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "760c9515",
    "metadata": {},
    "outputs": [
@@ -311,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "4c145a54",
    "metadata": {},
    "outputs": [
@@ -336,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "e76349e6",
    "metadata": {},
    "outputs": [
@@ -363,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "66a827ce",
    "metadata": {},
    "outputs": [
@@ -399,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "id": "ca0d31eb",
    "metadata": {},
    "outputs": [
@@ -426,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "f4395ef1",
    "metadata": {},
    "outputs": [
@@ -447,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "50bf6dbb",
    "metadata": {},
    "outputs": [
@@ -493,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "45e766f7",
    "metadata": {},
    "outputs": [
@@ -540,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "5fc1154b",
    "metadata": {},
    "outputs": [
@@ -566,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "3869d9a3",
    "metadata": {},
    "outputs": [
@@ -599,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "id": "220ee715",
    "metadata": {},
    "outputs": [
@@ -638,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "8c6da237",
    "metadata": {},
    "outputs": [
@@ -687,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "53b7592f",
    "metadata": {},
    "outputs": [
@@ -733,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "4ecbdaa8",
    "metadata": {},
    "outputs": [],
@@ -757,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "e2a65b94",
    "metadata": {},
    "outputs": [],
@@ -782,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "id": "324f6818",
    "metadata": {},
    "outputs": [
@@ -803,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "id": "023a8689",
    "metadata": {},
    "outputs": [
@@ -824,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "363210d7",
    "metadata": {},
    "outputs": [
@@ -856,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "id": "7b776d92",
    "metadata": {},
    "outputs": [
@@ -877,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "id": "d2db249b",
    "metadata": {},
    "outputs": [
@@ -908,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "id": "ddef825e",
    "metadata": {},
    "outputs": [
@@ -933,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "id": "a1905123",
    "metadata": {},
    "outputs": [
@@ -963,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "e46636fd",
    "metadata": {},
    "outputs": [
@@ -1005,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "id": "bf84d310",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "id": "2bb93311",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "id": "1251289b",
    "metadata": {},
    "outputs": [],
@@ -1098,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "36e568f1",
    "metadata": {},
    "outputs": [
@@ -1196,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 17,
    "id": "03b0f878",
    "metadata": {},
    "outputs": [
