--- a/2. Build Makemore/makemore_part2.ipynb
+++ b/2. Build Makemore/makemore_part2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "47eeccc2",
+   "metadata": {},
+   "source": [
+    "# Multi Layer Perceptron"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "202142d1",
